# dovi

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
.claude/: settings.local.json
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: dashboard.py  frame.py  ingest.py  query.py
backend/app/core/: config.py  security.py
backend/app/models/: chunk.py  manifest.py  session.py
backend/app/services/: asr.py  chunker.py  ffmpeg_agent.py  llm_router.py  rag_engine.py  sse_bus.py  summarizer_mapreduce.py  vector_store.py
backend/app/telemetry/: logging.py
backend/app/workers/: tasks.py
backend/tests/: conftest.py  test_chunker.py  test_dashboard.py  test_frame_roundtrip.py  test_query.py  test_smoke.py  test_sse_bus.py  test_visual_keywords.py
dashboard/: app.js  index.html  style.css
extension/: manifest.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
extension/src/background/: service_worker.ts  web_request.ts
extension/src/content/: inject.ts  mutation_observer.ts  player_controller.ts
extension/src/offscreen/: offscreen.html  offscreen.ts
extension/src/routing/: hybrid_router.ts
extension/src/shared/: config.ts  types.ts
extension/src/storage/: dexie_schema.ts
extension/src/types/: webvtt-parser.d.ts
extension/src/ui/components/: chat_view.tsx  settings_view.tsx
extension/src/ui/popup/: index.html  popup.tsx
extension/src/ui/sidepanel/: index.html  sidepanel.tsx
extension/tests/: placeholder.spec.ts
